<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit_controller</name>
  <version>0.0.0</version>
  <description>todo</description>
  <maintainer email="tanmaygoyal98@gmail.com">tanmay</maintainer>
  <license>Apache License 2.0</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <depend>rclpy</depend>
  <depend>gokart_cmd_msgs</depend>
  <depend>gokart_obs_msgs</depend>
  <depend>gokart_msgs</depend>
  <depend>gokart_core_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
